tests/baselines/reference/genericMergedDeclarationUsingTypeParameter2.errors.txt
==== tests/cases/compiler/genericMergedDeclarationUsingTypeParameter2.ts (2 errors) ====
    class foo<T> { constructor(x: T) { } }
    module foo {
        export var x: T;
                      ~
!!! error TS2095: Could not find symbol 'T'.
        var y = <T>1;
                 ~
!!! error TS2095: Could not find symbol 'T'.
    }
    